[package]
name = "rustlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
comrak = "0.16"
fs_extra = "1.3.0"
devserver_lib = "0.4.1"
minijinja = "0.30.5"
serde = { version = "1.0.130", features = ["derive"] }
